--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -33,8 +33,8 @@ jobs:
           echo "🔄 Running i18n..."
           pnpm run i18n
           
-          echo "🔄 Checking format..."
-          pnpm run format:check
+          echo "🔄 Running format..."
+          pnpm run format:linux
 
       - name: Check for changes after i18n (warning only)
         run: |
