ci: update PR Check workflow and build configurations
- Switch build-test runner to windows-latest for Tauri compatibility
- Add Rust dependency and build caching to reduce CI time
- Update format commands to use --cached --diff-filter=ACM for staged files only
- Improve format checking with continue-on-error and output handling
- Enhance verify-changed step to exclude Windows NUL files and check format failures
- Update PR comment messages for clearer i18n and format reminders
- Replace cargo check with tauri info, tsc, and light tauri build in checks
- Add auto-formatting to i18n type generation script with error handling
- Move Windows-specific Tauri dependencies (updater, single-instance, etc.) to target-specific config
- Remove trailing newline in dict-types.ts (later restored updater permission in capabilities)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "tauri": "tauri",
     "i18n": "(copy /Y src\\locales\\* src-tauri\\resources\\locales\\ >nul 2>&1 || echo 'Locale sync completed') && node scripts/i18n/generate-dict-types.js",
     "bump-version": "node scripts/bump-version.js",
-    "format": "powershell -c \"git diff --name-only | ForEach-Object { if ($_.Trim()) { & prettier --write $_ } }\"",
+    "format": "powershell -c \"git diff --cached --name-only --diff-filter=ACM | ForEach-Object { if ($_.Trim()) { & prettier --write $_ } }\"",
     "format:check": "prettier --check .",
-    "format:linux": "git diff --name-only | xargs -r prettier --write"
+    "format:linux": "git diff --cached --name-only --diff-filter=ACM | xargs -r prettier --write"
   },
   "license": "MIT",
   "dependencies": {
