ci: update PR Check workflow and build configurations (#24)
- Switch build-test runner to windows-latest for Tauri compatibility
- Add Rust dependency and build caching to reduce CI time
- Update format commands to use --cached --diff-filter=ACM for staged files only
- Improve format checking with continue-on-error and output handling
- Update PR comment messages for clearer i18n and format reminders
- Replace cargo check with tauri info, tsc, and light tauri build in checks
- Add auto-formatting to i18n type generation script with error handling
- Move Windows-specific Tauri dependencies (updater, single-instance, etc.) to target-specific config
- Remove trailing newline in dict-types.ts (later restored updater permission in capabilities)
- Add TypeScript check to validate only modified files and fail on errors

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -46,7 +46,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
             });
-            
+
             for (const comment of comments.data) {
               if (comment.user.type === 'Bot' && 
                   (comment.body.includes('🤖 Format Check Reminder') || 
@@ -61,20 +61,31 @@ jobs:
             }
 
       - name: Check i18n and format
+        id: check
+        continue-on-error: true
         run: |
           echo "🔄 Running i18n..."
           pnpm run i18n
 
-          echo "🔄 Running format..."
-          pnpm run format:linux
+          echo "🔄 Checking format..."
+          if pnpm run format:check; then
+            echo "format_failed=false" >> $GITHUB_OUTPUT
+          else
+            echo "format_failed=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Check for changes after i18n
         id: verify-changed
         run: |
-          if [[ -n $(git status --porcelain) ]]; then
+          # Check for relevant changes (exclude Windows NUL file)
+          relevant_changes=$(git status --porcelain | grep -v "^?? nul$" || true)
+          if [[ -n "$relevant_changes" ]] || [[ "${{ steps.check.outputs.format_failed }}" == "true" ]]; then
             echo "changed=true" >> $GITHUB_OUTPUT
-            echo "📝 Changes detected after i18n:"
+            echo "📝 Changes detected after i18n or format issues found:"
             git status --porcelain
+            if [[ "${{ steps.check.outputs.format_failed }}" == "true" ]]; then
+              echo "⚠️ Format issues detected"
+            fi
           else
             echo "changed=false" >> $GITHUB_OUTPUT
             echo "✅ No changes needed - i18n and format are correct"
@@ -87,25 +98,25 @@ jobs:
           script: |
             // Create new comment (old ones already cleaned up)
             const newComment = `## 🤖 Format Check Reminder
-            
+
             **Notice:**
-            The project detected that \`pnpm i18n + pnpm format\` has not been run. If you have new commits in the future, please remember to run these commands.
+            The project detected that \`pnpm i18n\` or \`pnpm format\` has not been run. If you have new commits in the future, please remember to run these commands.
 
             - \`pnpm i18n\` is not mandatory, only required when actually changing translation keys
-            - \`pnpm format\` in this project only processes changed files by default
+            - \`pnpm format\` formats all files to ensure consistent code style
 
             **This is only a reminder and does not require immediate execution.**
 
             ---
 
             **提示:**
-            检测到项目未运行 \`pnpm i18n + pnpm format\`。如果后续有新的commit，请记得运行这些命令。
+            检测到项目未运行 \`pnpm i18n\` 或 \`pnpm format\`。如果后续有新的commit，请记得运行这些命令。
 
             - \`pnpm i18n\` 并非强制，允许只在实际更改翻译键时运行 
-            - \`pnpm format\` 在当前项目默认只处理已更改文件
+            - \`pnpm format\` 格式化所有文件以确保代码风格一致
 
             **仅作提示无需立刻执行。**`;
-            
+
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -114,7 +125,7 @@ jobs:
             });
 
   build-test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: pre-check
     steps:
       - name: Checkout repository
@@ -133,21 +144,24 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libpango1.0-dev \
-            libcairo2-dev \
-            libgdk-pixbuf2.0-dev \
-            libwebkit2gtk-4.1-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libsoup-3.0-dev
+          echo "📦 Installing system dependencies for Windows..."
+          # Windows Tauri builds don't require additional system dependencies like Linux
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
+
+      - name: Cache Rust dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+          key: ${{ runner.os }}-cargo-deps-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-deps-
 
       - name: Cache Rust build
         uses: Swatinem/rust-cache@v2
@@ -161,29 +175,41 @@ jobs:
       - name: Build frontend
         run: pnpm run build
 
-      - name: Test Tauri build configuration
+      - name: Light error check
+        id: light_check
         run: |
-          echo "🔍 Testing Tauri build configuration..."
-          
-          # Check if tauri.conf.json is valid
-          if ! pnpm run tauri info > /dev/null 2>&1; then
-            echo "❌ Tauri configuration error"
-            pnpm run tauri info
-            exit 1
-          fi
-          
-          # Test Rust syntax without compiling Windows-specific dependencies
-          echo "🏗️ Testing Rust syntax..."
-          cd src-tauri
-          
-          # Check syntax only (faster and avoids platform-specific dependencies)
-          cargo check --no-default-features --target x86_64-unknown-linux-gnu || {
-            echo "⚠️ Linux target check failed, trying basic syntax check..."
-            cargo check --lib --bins --no-default-features || {
-              echo "ℹ️ Skipping full Rust check due to platform-specific dependencies"
-              echo "✅ Frontend build passed - Tauri configuration is valid"
-            }
+          Write-Host "🔍 Running light error checks..."
+
+          # Check if Tauri configuration is valid
+          try {
+              pnpm run tauri info 2>$null
+          } catch {
+              Write-Host "❌ Tauri configuration error"
+              pnpm run tauri info
+              exit 1
           }
+
+          # Quick TypeScript type checking (no emit)
+          Write-Host "📝 Checking TypeScript compilation..."
+          $modifiedFiles = git diff --name-only "origin/${{ github.base_ref }}...HEAD" 2>$null
+          $tsFiles = $modifiedFiles | Where-Object { $_ -match '\.(ts|tsx)$' }
+          if ($tsFiles) {
+              try {
+                  npx tsc --noEmit --skipLibCheck $tsFiles
+                  Write-Host "✅ TypeScript check passed for modified files"
+              } catch {
+                  Write-Host "❌ TypeScript compilation failed for modified files"
+                  exit 1
+              }
+          } else {
+              Write-Host "ℹ️ No TypeScript files modified, skipping type check"
+          }
+
+          # Light Tauri build check (no bundle, debug mode)
+          Write-Host "🔨 Running light Tauri build..."
+          pnpm run tauri build --no-bundle --debug
+
+          Write-Host "✅ Light checks passed - no critical errors detected"
 
       - name: Comment on PR about build failure
         if: failure()
@@ -192,18 +218,13 @@ jobs:
           script: |
             // Create new build failure comment (old ones already cleaned up)
             const failureComment = `## ❌ Build Test Failed
-            
+
             **Build Test Failed:**
             Please check the build logs for details and fix the issues before merging.
 
             Common issues:
             - Frontend build errors (TypeScript, CSS, etc.)
-            
-            常见问题：
-            - 前端构建错误（TypeScript、CSS等）
-            - Rust编译错误
-            - Tauri配置问题`;
-            
+
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
