ci: remove rust build from pr check to speed up builds
- Remove pnpm run tauri build --no-bundle --debug from light error checks
- Update PR bot comment to recommend running prettier only on changed files

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -50,7 +50,7 @@ jobs:
             for (const comment of comments.data) {
               if (comment.user.type === 'Bot' && 
                   (comment.body.includes('🤖 Format Check Reminder') || 
-                   comment.body.includes('❌ Build Test Failed'))) {
+                   comment.body.includes('❌ Validation Failed'))) {
                 await github.rest.issues.deleteComment({
                   comment_id: comment.id,
                   owner: context.repo.owner,
@@ -100,7 +100,8 @@ jobs:
             const newComment = `## 🤖 Format Check Reminder
 
             **Notice:**
-            The project detected that \`pnpm i18n\` or \`pnpm format\` has not been run. If you have new commits in the future, please remember to run these commands.
+            The project detected that \`pnpm i18n\` or \`pnpm format\` has not been run.
+            If you have new commits in the future, please remember to run \`git diff --name-only origin/develop | ForEach-Object { if ($_.Trim()) { npx prettier --write $_ } }\`
 
             - \`pnpm i18n\` is not mandatory, only required when actually changing translation keys
             - \`pnpm format\` formats all files to ensure consistent code style
@@ -110,7 +111,8 @@ jobs:
             ---
 
             **提示:**
-            检测到项目未运行 \`pnpm i18n\` 或 \`pnpm format\`。如果后续有新的commit，请记得运行这些命令。
+            检测到项目未运行 \`pnpm i18n\` 或 \`pnpm format\`。
+            如果后续有新的commit，请记得运行\`git diff --name-only origin/develop | ForEach-Object { if ($_.Trim()) { npx prettier --write $_ } }\`
 
             - \`pnpm i18n\` 并非强制，允许只在实际更改翻译键时运行 
             - \`pnpm format\` 格式化所有文件以确保代码风格一致
@@ -175,10 +177,10 @@ jobs:
       - name: Build frontend
         run: pnpm run build
 
-      - name: Light error check
+      - name: Light validation check
         id: light_check
         run: |
-          Write-Host "🔍 Running light error checks..."
+          Write-Host "🔍 Running light validation checks..."
 
           # Check if Tauri configuration is valid
           try {
@@ -205,25 +207,25 @@ jobs:
               Write-Host "ℹ️ No TypeScript files modified, skipping type check"
           }
 
-          # Light Tauri build check (no bundle, debug mode)
-          Write-Host "🔨 Running light Tauri build..."
-          pnpm run tauri build --no-bundle --debug
+          Write-Host "✅ Validation checks passed - no critical errors detected"
 
-          Write-Host "✅ Light checks passed - no critical errors detected"
+          # Debug exit code
+          Write-Host "Last exit code: $LASTEXITCODE"
+          exit 0
 
       - name: Comment on PR about build failure
         if: failure()
         uses: actions/github-script@v7
         with:
           script: |
-            // Create new build failure comment (old ones already cleaned up)
-            const failureComment = `## ❌ Build Test Failed
+            // Create new validation failure comment (old ones already cleaned up)
+            const failureComment = `## ❌ Validation Failed
 
-            **Build Test Failed:**
-            Please check the build logs for details and fix the issues before merging.
+            **Validation Failed:**
+            Please check the validation logs for details and fix the issues before merging.
 
             Common issues:
-            - Frontend build errors (TypeScript, CSS, etc.)
+            - Configuration errors or TypeScript type errors`;
 
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
